C/sofa.h


void iauFw2m(double gamb, double phib, double psi, double eps,
             double r[3][3]);

void iauFw2xy(double gamb, double phib, double psi, double eps,
              double *x, double *y);

void iauNum00a(double date1, double date2, double rmatn[3][3]);

void iauNum00b(double date1, double date2, double rmatn[3][3]);

void iauNum06a(double date1, double date2, double rmatn[3][3]);

void iauNumat(double epsa, double dpsi, double deps, double rmatn[3][3]);

void iauNut00a(double date1, double date2, double *dpsi, double *deps);

void iauNut00b(double date1, double date2, double *dpsi, double *deps);

void iauNut06a(double date1, double date2, double *dpsi, double *deps);

void iauNut80(double date1, double date2, double *dpsi, double *deps);

void iauNutm80(double date1, double date2, double rmatn[3][3]);

double iauObl06(double date1, double date2);

double iauObl80(double date1, double date2);

void iauP06e(double date1, double date2,
             double *eps0, double *psia, double *oma, double *bpa,
             double *bqa, double *pia, double *bpia,
             double *epsa, double *chia, double *za, double *zetaa,
             double *thetaa, double *pa,
             double *gam, double *phi, double *psi);

void iauPb06(double date1, double date2,
             double *bzeta, double *bz, double *btheta);